--- a/transfer.html
+++ b/transfer.html
@@ -101,71 +101,61 @@
                     <table>
                         <tbody>
                             <tr>
-                                <td><img src="./images/person-1.png" alt=""></td>
                                 <td class="desc"><strong>Samson Davidson</strong> <br> david@email.com</td>
                                 <td class="desc">
                                     <h3> &#8377; <span id="davidBankBalance">10000</span> </h3>
                                 </td>
                             </tr>
                             <tr>
-                                <td><img src="./images/person-2.png" alt=""></td>
-                                <td class="desc"> <strong>Kendrick Joseph</strong> <br> joseph@email.com </td>
+                                <td class="desc"> <strong>Joseph</strong> <br> joseph@email.com </td>
                                 <td class="desc">
                                     <h3> &#8377; <span id="josephBankBalance">20000</span> </h3>
                                 </td>
                             </tr>
                             <tr>
-                                <td><img src="./images/person-3.png" alt=""></td>
-                                <td class="desc"> <strong>Melinda Snyder</strong> <br> melinda@email.com</td>
+                                <td class="desc"> <strong>Melvin</strong> <br> melvin@email.com</td>
                                 <td class="desc">
-                                    <h3> &#8377; <span id="melindaBankBalance">30000</span> </h3>
+                                    <h3> &#8377; <span id="melvinBankBalance">30000</span> </h3>
                                 </td>
                             </tr>
                             <tr>
-                                <td><img src="./images/person-4.png" alt=""></td>
-                                <td class="desc"> <strong>Kara Barker</strong> <br>kara@email.com</td>
+                                <td class="desc"> <strong>Max</strong> <br>max@email.com</td>
                                 <td class="desc">
-                                    <h3> &#8377; <span id="karaBankBalance">40000</span> </h3>
+                                    <h3> &#8377; <span id="maxBankBalance">40000</span> </h3>
                                 </td>
                             </tr>
                             <tr>
-                                <td><img src="./images/person-5.png" alt=""></td>
-                                <td class="desc"> <strong>Trishna Kumar</strong> <br>trishna@email.com </td>
+                                <td class="desc"> <strong>Luca</strong> <br>luca@email.com </td>
                                 <td class="desc">
-                                    <h3> &#8377; <span id="trishnaBankBalance">50000</span> </h3>
+                                    <h3> &#8377; <span id="lucaBankBalance">50000</span> </h3>
                                 </td>
                             </tr>
                             <tr>
-                                <td><img src="./images/person-6.png" alt=""></td>
-                                <td class="desc"> <strong>Leonardo Pisani</strong> <br> leonardo@email.com </td>
+                                <td class="desc"> <strong>Ricky</strong> <br> ricky@email.com </td>
                                 <td class="desc">
-                                    <h3> &#8377; <span id="trishnaBankBalance">60000</span> </h3>
+                                    <h3> &#8377; <span id="rickyBankBalance">60000</span> </h3>
                                 </td>
                             </tr>
                             <tr>
-                                <td><img src="./images/person-7.png" alt=""></td>
-                                <td class="desc"> <strong>Ashutosh Yadav</strong> <br> ashutosh@email.com </td>
+                                <td class="desc"> <strong>Taylor</strong> <br> taylor@email.com </td>
                                 <td class="desc">
-                                    <h3> &#8377; <span id="ashutoshBankBalance">70000</span> </h3>
+                                    <h3> &#8377; <span id="taylorBankBalance">70000</span> </h3>
                                 </td>
                             </tr>
                             <tr>
-                                <td><img src="./images/person-8.png" alt=""></td>
-                                <td class="desc"> <strong>Bertram Peters</strong> <br> bertram@email.com </td>
+                                <td class="desc"> <strong>Peter</strong> <br> peter@email.com </td>
                                 <td class="desc">
-                                    <h3> &#8377; <span id="bertramBankBalance">80000</span> </h3>
+                                    <h3> &#8377; <span id="peterBankBalance">80000</span> </h3>
                                 </td>
                             </tr>
                             <tr>
-                                <td><img src="./images/person-9.png" alt=""></td>
-                                <td class="desc"> <strong>Sebastian Malcom</strong> <br> sebastian@email.com</td>
+                                <td class="desc"> <strong>Sebastian</strong> <br> sebastian@email.com</td>
                                 <td class="desc">
                                     <h3> &#8377; <span id="sebastainBankBalance">90000</span> </h3>
                                 </td>
                             </tr>
                             <tr>
-                                <td><img src="./images/person-10.png" alt=""></td>
-                                <td class="desc"><strong> Austin Yates </strong> <br> austin@email.com </td>
+                                <td class="desc"><strong> Austin </strong> <br> austin@email.com </td>
                                 <td class="desc">
                                     <h3> &#8377; <span id="austinBankBalance">100000</span></h3>
                                 </td>
